// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Segmented Segmented base demo works fine 1`] = `
<base>
  <wx-view
    class="example-segmented"
  >
    <t-segmented
      defaultValue="home"
      options="{{
        Array [
          "home",
          "categeray",
          "min",
        ]
      }}"
    />
  </wx-view>
  <wx-view
    class="example-segmented"
  >
    <t-segmented
      options="{{
        Array [
          Object {
            "icon": "home",
            "label": "home",
            "value": 0,
          },
          Object {
            "icon": "app",
            "label": "categeray",
            "value": 1,
          },
          Object {
            "icon": "user",
            "label": "mine",
            "value": 2,
          },
        ]
      }}"
      value="{{1}}"
      bind:change="onChangeWithIcon"
    />
  </wx-view>
</base>
`;

exports[`Segmented Segmented block demo works fine 1`] = `
<block>
  <wx-view
    class="example-segmented"
  >
    <t-segmented
      block="{{true}}"
      options="{{
        Array [
          Object {
            "icon": "home",
            "label": "home",
            "value": 0,
          },
          Object {
            "icon": "app",
            "label": "categeray",
            "value": 1,
          },
          Object {
            "icon": "user",
            "label": "mine",
            "value": 2,
          },
        ]
      }}"
      value="{{0}}"
      bind:change="onChangeWithIcon"
    />
  </wx-view>
</block>
`;

exports[`Segmented Segmented disabled demo works fine 1`] = `
<disabled>
  <wx-view
    class="example-segmented"
  >
    <t-segmented
      disabled="{{true}}"
      options="{{
        Array [
          "最近",
          "推荐",
          "热门",
        ]
      }}"
      value="最近"
      bind:change="onChange"
    />
  </wx-view>
  <wx-view
    class="example-segmented"
  >
    <t-segmented
      options="{{
        Array [
          Object {
            "label": "周一",
            "value": 0,
          },
          Object {
            "label": "周二",
            "value": 1,
          },
          Object {
            "disabled": true,
            "label": "周三",
            "value": 2,
          },
          Object {
            "label": "周四",
            "value": 3,
          },
          Object {
            "disabled": true,
            "label": "周五",
            "value": 4,
          },
        ]
      }}"
      value="{{1}}"
      bind:change="onChangeWithDisabled"
    />
  </wx-view>
</disabled>
`;
